<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_departure_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ucsd.cse110fa16.group14.ipark.ElegirHoraSalidaActivity"
    >

    <TextView
        android:text=":"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView52"
        android:textSize="40sp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/min"
        android:layout_marginRight="5dp" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/min"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:descendantFocusability="blocksDescendants" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hour"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textView52"
        android:layout_marginRight="5dp"
        android:descendantFocusability="blocksDescendants" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amPM"
        android:layout_marginStart="22dp"
        android:layout_alignBaseline="@+id/min"
        android:layout_alignBottom="@+id/min"
        android:layout_toEndOf="@+id/min"
        android:descendantFocusability="blocksDescendants" />

    <Button
        android:id="@+id/previous"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#9B9295"
        android:text="ANTERIOR"

        android:textSize="18sp" />

    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#9B9295"
        android:onClick="showDialog"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="SIGUIENTE"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button4"
        android:textAllCaps="false"
        android:textColor="#404040"
        android:textSize="18sp"
        android:background="@mipmap/help"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="HORA DE SALIDA"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ACA3A6"
        android:text="CANCELAR"
        android:textSize="18sp" />

</RelativeLayout>
