...
        android:text=" TOTAL A PAGAR:"
        android:textAlignment="center"
        android:textColor="#202020"
        android:textSize="24sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="CONFIRMAR"
        android:textAlignment="center"
...
