...

    <View
        android:layout_height="1dp"
        android:background="#606060"
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_above="@+id/countdownCheckoutButton" />

    <Button
        android:id="@+id/countdownEmergencyButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
...
