...
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/reserveButton"
        android:layout_below="@+id/reserveButton"
        android:ems="6"
        android:text="Reserva"
        android:textAlignment="center"
        android:textColor="#404040"
        android:textSize="15dp"
...
