<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="ucsd.cse110fa16.group14.ipark.LoginPage"
    android:screenOrientation="portrait"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="adjustResize|stateHidden" >

    <EditText
        android:id="@+id/password"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="204dp"
        android:drawableLeft="@drawable/ic_action_contrasena"
        android:background="@drawable/lighter_border"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/password"
        android:layout_marginBottom="31dp"
        android:text="CREAR CUENTA" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp"
        android:clickable="false"
        android:text="¿Olvidaste tu Constraseña?"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/help"
        android:background="@mipmap/help"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:text="INICIAR SESIÓN"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:background="@drawable/lighter_border"
        android:drawableLeft="@drawable/ic_action_login"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userName"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignEnd="@+id/userName"
        android:layout_marginEnd="11dp"
        android:text=" Recuérdame"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="136dp"
        android:layout_alignStart="@+id/forget"
        android:layout_alignTop="@+id/help"
        app:srcCompat="@drawable/saimtt" />

</RelativeLayout>

